switch maxpermsize to MaxMetaspaceSize