@@ -11,7 +11,7 @@ COMPONENT_NAME=$6
 
 if [ "$BUILD_TOOL" == "maven" ]; then
     echo "Testing with Maven"
-    MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=128m"
+    MAVEN_OPTS="-Xmx1024m -XX:MaxMetaspaceSize=128m"
     if [ "$HTTP_PROXY" != "" ]; then
         # Swap , for |
         MAVEN_PROXY_IGNORE=`echo "$NO_PROXY" | sed -e 's/ //g' -e 's/\"\,\"/\|/g' -e 's/\,\"/\|/g' -e 's/\"$//' -e 's/\,/\|/g'`
